fix(Scoreboard): Handle layer visibility

--- a/src/components/instant-apps-scoreboard/instant-apps-scoreboard.scss
+++ b/src/components/instant-apps-scoreboard/instant-apps-scoreboard.scss
@@ -165,9 +165,8 @@ $boxShadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
 }
 
 :host(.instant-apps-scoreboard__position--side.instant-apps-scoreboard__mode--floating) {
-  top: 50%;
+  top: 15px;
   left: 15px;
-  transform: translateY(-50%);
   max-height: calc(100% - 30px);
   .instant-apps-scoreboard {
     min-width: 10vw;
